--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 Template Name: Sportlife08
 Author: <a href="http://netzfeld.de/">Netzfeld</a>
@@ -87,7 +87,7 @@ background-repeat: repeat-y;}
                   <hr>
                   <div class="galerie">
                     <div class="galerie-unten">
-                      <div class="galeriebild-gross"><a href="#"><img src="images/design/schwarz4.png" alt=""></a></div>
+                      <div class="galeriebild-gross"><a href="#"><img src="images/design/schwarz4.PNG" alt=""></a></div>
                     </div>
                   </div>
                   <hr>                  
