--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ background-repeat: repeat-y;}
                 <hr>
               </div>
               <div id="box-hauptinhalt">
-                <div id="box-werbung2"><a href="#"><img src="images/sportlife08/banner-rectangle.png" alt=""></a><a href="#"><img src="images/sportlife08/schwarz2.png" alt=""></a><a href="#"><img src="images/sportlife08/schwarz3.png" alt=""></a>                  
+                <div id="box-werbung2"><a href="#"><img src="images/sportlife08/banner-rectangle.png" alt=""></a><a href="#"><img src="images/sportlife08/schwarz2.PNG" alt=""></a><a href="#"><img src="images/sportlife08/schwarz3.PNG" alt=""></a>                  
                 </div>
                 <div id="box-inhalt">
                   <h1>Historia del Comercio Justo a Nivel Mundial</h1>
